--- a/Hypothesis3.Rmd
+++ b/Hypothesis3.Rmd
@@ -3,12 +3,9 @@ title: "Hypothesis 3"
 output: html_document
 ---
 
-```{r, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
 
 
-## Hypothesis 3: Those who voted for anti-immigration parties will report lower pro-environment attitudes than those who voted for pro-environment parties.
+# Hypothesis 3: Those who voted for anti-immigration parties will report lower pro-environment attitudes than those who voted for pro-environment parties.
 
 ### Model 0: random intercepts for environment attitudes
 
