--- a/All_analyses.Rmd
+++ b/All_analyses.Rmd
@@ -3,14 +3,14 @@ title: Association between Attitudes towards Refugees and Attitudes towards the 
 output: 
   html_document: 
     keep_md: yes
+    number_sections: yes
     toc: yes
-    toc_depth: 4
+    toc_depth: 5
   pdf_document: 
     toc: yes
     toc_depth: 4
 fontsize: 12pt
 geometry: margin=0.5in
-#documentclass: article
 ---
 
 ```{r setup, include=FALSE}
@@ -30,9 +30,44 @@ options(width = 130)
 ```{r child = 'Preparations.Rmd'}
 ```
 
-# Hypothesis 5
+\newpage
+
+```{r child = 'Hypothesis1.Rmd'}
+```
+
+
+\newpage
+
+```{r child = 'Hypothesis2.Rmd'}
+```
+
+
+\newpage
+
+```{r child = 'Hypothesis3.Rmd'}
+```
+
+
+\newpage
+
+```{r child = 'Hypothesis4.Rmd'}
+```
+
 
 \newpage
 
 ```{r child = 'Hypothesis5.Rmd'}
+```
+
+
+\newpage
+
+```{r child = 'Exploratory_moderators.Rmd'}
+```
+
+
+
+\newpage
+
+```{r child = 'Exploratory_non_linearity.Rmd'}
 ```
