Added exploratory analyses for hypothesis 5 where the tests were conducted for the two engagement items separately

--- a/All_analyses.Rmd
+++ b/All_analyses.Rmd
@@ -71,3 +71,9 @@ options(width = 130)
 
 ```{r child = 'Exploratory_non_linearity.Rmd'}
 ```
+
+
+\newpage
+
+```{r child = 'Exploratory_Hypothesis5_Interest.Rmd'}
+```
