--- a/Hypothesis3.Rmd
+++ b/Hypothesis3.Rmd
@@ -1,9 +1,15 @@
 ---
 title: "Hypothesis 3"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
+    toc: yes
+    toc_depth: 5
 ---
 
 
+
+\newpage
 
 # Hypothesis 3: Those who voted for anti-immigration parties will report lower pro-environment attitudes than those who voted for pro-environment parties.
 
