--- a/Hypothesis4.Rmd
+++ b/Hypothesis4.Rmd
@@ -1,6 +1,10 @@
 ---
 title: "Hypothesis 4"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
+    toc: yes
+    toc_depth: 5
 ---
 
 
