confidence intervals for Supplementary materials

--- a/Exploratory_Hypothesis5_Interest.Rmd
+++ b/Exploratory_Hypothesis5_Interest.Rmd
@@ -3,7 +3,7 @@ title: "Exlopratory Hypothesis 5 with Political Interest"
 output: html_document
 ---
 
-# Hypothesis 5: The strength of the association between environment and refugee attitudes is stronger among more politically engaged individuals. 
+# Exploratory Hypothesis 5: The strength of the association between environment and refugee attitudes is stronger among more politically interested individuals. 
 
 Omit missing values on political interest item
 
