A Pdf of Figure 2

--- a/Exploratory_non_linearity.Rmd
+++ b/Exploratory_non_linearity.Rmd
@@ -827,5 +827,9 @@ ggsave(plot = non.lin.plot,
        filename="non.lin.plot.png",device = "png",
        units = "cm",width=12,height=18,dpi = 600)
 
+ggsave(plot = non.lin.plot,
+       filename="non.lin.plot.pdf",device = "pdf",
+       units = "cm",width=12,height=18,dpi = 600)
+
 ```
 
